Fix cta button on mobile

--- a/client/landing/stepper/declarative-flow/internals/steps-repository/bulk-domain-transfer-domains/styles.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/bulk-domain-transfer-domains/styles.scss
@@ -177,6 +177,9 @@
 					background: var(--gray-gray-5, #dcdcde);
 					opacity: 1;
 				}
+				@media ( max-width: $break-medium ) {
+					width: 100%;
+				}
 			}
 		}
 
